[gd_scene load_steps=2 format=3 uid="uid://c5rtkwtriush3"]

[ext_resource type="Script" path="res://towers/Upgrades/upgrade_ui.gd" id="1_c4maw"]

[node name="Upgrade UI" type="Node2D"]
position = Vector2(25, 0)
script = ExtResource("1_c4maw")

[node name="Damage" type="Button" parent="."]
z_index = -1
offset_right = 131.0
offset_bottom = 102.0
tooltip_text = "Increases Damage by 100%"
text = "Damage
20$"
metadata/_edit_use_anchors_ = true

[node name="Remover" type="Button" parent="."]
z_index = -1
offset_left = 451.0
offset_right = 582.0
offset_bottom = 102.0
text = "Remove latest 
Upgrade - 0$"
metadata/_edit_use_anchors_ = true

[node name="Pierce" type="Button" parent="."]
z_index = -1
offset_left = 150.0
offset_top = 1.0
offset_right = 281.0
offset_bottom = 103.0
tooltip_text = "Increases Pierce by 1"
text = "Pierce
20$"
metadata/_edit_use_anchors_ = true

[node name="AttackSpeed" type="Button" parent="."]
z_index = -1
offset_left = 300.0
offset_right = 431.0
offset_bottom = 102.0
tooltip_text = "Increases Attack Speed by 100%"
text = "Attack Speed
20$"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Damage" to="." method="_on_damage_pressed"]
[connection signal="pressed" from="Remover" to="." method="_on_remover_pressed"]
[connection signal="pressed" from="Pierce" to="." method="_on_pierce_pressed"]
[connection signal="pressed" from="AttackSpeed" to="." method="_on_attack_speed_pressed"]
